# AbstractTUI

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OWNERSHIP.md  README.md  SECURITY.md  book.toml  llms-full.txt  llms.txt
.cursor/: hooks.json  mcp.json
.cursor/hooks/: agora_wait.sh
.cursor/rules/: agora.mdc
.github/: SETUP.md  dependabot.yml
.github/workflows/: ci.yml  docs.yml  perf.yml  release.yml
docs/: README.md  SUMMARY.md  api.md  architecture.md  faq.md  getting-started.md  graphics-and-3d.md  graphs-and-diagrams.md  live-data.md  theming.md  troubleshooting.md
docs/adr/: 0001-api-stability-policy.md  0002-two-style-types.md  0003-struct-extensibility.md  0004-extension-packaging.md  README.md
docs/backlog/: overview.md
docs/captures/: README.md  code-diff.styled.txt  code-diff.txt  components.styled.txt  components.txt  dashboard-dark.styled.txt  dashboard-dark.txt  dashboard-dawn.styled.txt  dashboard-dawn.txt  feed-scrolled.styled.txt  feed-scrolled.txt  gallery.styled.txt  gallery.txt  grid.styled.txt  grid.txt  hello.styled.txt  hello.txt  images.styled.txt  images.txt  reader-table.styled.txt  reader-table.txt  select-open.styled.txt  select-open.txt  splash-2d-reveal.styled.txt  splash-2d-reveal.txt  splash-2d.styled.txt  splash-2d.txt  splash-3d-reveal.styled.txt  splash-3d-reveal.txt  splash-3d.styled.txt  splash-3d.txt  themes-table.md  themes.styled.txt  themes.txt  transcript-stream.styled.txt  transcript-stream.txt  viewer3d.styled.txt  viewer3d.txt  widgets.styled.txt  widgets.txt
docs/design/: 00-vision.md  01-damage-contract.md  gfx-three.md  reactive-ui.md  render.md  term-input.md  testing.md  theme-identity.md
docs/media/: dashboard.tape  gallery.tape  viewer3d.tape
examples/: README.md  caps.rs  capture.rs  components.rs  decide.rs  drawers.rs  effects.rs  feed.rs  gallery.rs  grid.rs  hello.rs  images.rs  reader.rs  screenshot.rs  shell.rs  splash.rs  themes.rs  transcript.rs  viewer3d.rs  voice_mock.rs  widgets.rs
examples/capture/: app_shots.rs  main.rs
examples/common/: mod.rs
examples/dashboard/: data.rs  main.rs
extensions/: README.md
extensions/graph/: CHANGELOG.md  Cargo.toml  README.md
extensions/graph/examples/: network.rs  workflow.rs
extensions/graph/src/: desc.rs  dump.rs  lib.rs  view.rs  view_cards.rs  view_edges.rs  view_style.rs
extensions/graph/src/layout/: coords.rs  force.rs  geom.rs  grid.rs  layered.rs  mod.rs  ordering.rs  resolve.rs
extensions/graph/tests/: cycles_and_fallback.rs  determinism.rs  edge_cases.rs  force_behavior.rs  layered_quality.rs  perf_view.rs  scale_smoke.rs  view_attack_cycle3.rs  view_attack_list.rs  view_interact.rs  view_render.rs
extensions/mermaid/: CHANGELOG.md  Cargo.toml  README.md
extensions/mermaid/examples/: mermaid.rs
extensions/mermaid/fixtures/: README.md  accept_flowchart_bt.mmd  accept_flowchart_edges_all.mmd  accept_flowchart_lr_shapes_labels.mmd  accept_flowchart_rl.mmd  accept_flowchart_shapes_all.mmd  accept_flowchart_styled_ignored.mmd  accept_flowchart_tb.mmd  accept_sequence_basic.mmd  accept_sequence_full.mmd  accept_state_flat.mmd  fallback_class.mmd  fallback_edge_chain.mmd  fallback_gantt.mmd  fallback_gitgraph.mmd  fallback_infix_label.mmd  fallback_journey.mmd  fallback_mindmap.mmd  fallback_pie.mmd  fallback_sequence_loop.mmd  fallback_state_composite.mmd  fallback_subgraph.mmd  fallback_timeline.mmd
extensions/mermaid/src/: compile.rs  flowchart.rs  ir.rs  lib.rs  lines.rs  seq_layout.rs  seq_render.rs  sequence.rs  state.rs  view.rs
extensions/mermaid/tests/: compile_graph.rs  corpus.rs  cycle3_attack.rs  fuzz_no_panic.rs  parser_flowchart.rs  parser_sequence.rs  render_and_fallback.rs
reviews/: abstractcode-tui-review-2026-07-23.md  abstractcode-tui-v2-upgrade-prompt.md  abstractcode-tui-v3-upgrade-prompt.md  agora-tui-v2-upgrade-prompt.md  gateway-console-v2-upgrade-prompt.md
reviews/cycle1/: design-requests.md  gfx3d-requests.md  kernel-requests.md  react-report.md  react-requests.md  redteam-on-architecture.md  redteam-requests.md  render-requests.md
reviews/cycle10/: final-status.md
reviews/cycle11/: completeness-and-code-port.md  robustness-and-chat-port.md
reviews/cycle2/: design-requests.md  gfx3d-requests.md  kernel-requests.md  react-report.md  react-requests.md  redteam-findings.md  redteam-requests.md  render-requests.md
reviews/cycle3/: design-guide-note.md  design-requests.md  gfx3d-requests.md  kernel-requests.md  react-report.md  react-requests.md  redteam-findings.md  render-requests.md
reviews/cycle4/: design-requests.md  design-review-widgets.md  gfx3d-requests.md  integrator-rulings.md  kernel-requests.md  react-report.md  react-requests.md  redteam-findings.md  redteam-requests.md  render-requests.md
reviews/wave9/: perf-proofs.md  (+1 more)
runtime/: .workflow_policy_secret  steer_sidecar.sqlite3  steer_sidecar.sqlite3-shm  workflow_catalog.json
src/: lib.rs  prelude.rs
tests/: adv_activation.rs  adv_anim.rs  adv_anim_gltf.rs  adv_app.rs  adv_compose.rs  adv_double_click.rs  adv_gfx.rs  adv_gltf_anim.rs  adv_grid.rs  adv_image.rs  adv_image_lifecycle.rs  adv_input.rs  adv_jpeg.rs  adv_layout.rs  adv_overlay.rs  adv_pointer.rs  adv_proto.rs  adv_raster.rs  adv_reactive.rs  adv_render.rs  adv_resize.rs  adv_resize_modal.rs  adv_scroll.rs  adv_selection.rs  adv_splash.rs  adv_text.rs  adv_theme.rs  adv_unicode.rs  adv_widgets.rs  alloc_budget.rs  api_first_use.rs  fuzz_big.rs  integration_matrix.rs  live_smoke.rs  perf_app_surfaces.rs  perf_budgets.rs  rig_self.rs  soak.rs  vt_regions.rs  vt_screen.rs  (+30 more)
(+597 files in other folders)
