[package]
name = "abstracttui"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Laurent-Philippe Albou <contact@abstractframework.ai>"]
description = "A reactive, compositor-grade terminal UI engine: fine-grained signals, layered rendering with damage tracking, images (kitty/iTerm2/sixel/mosaic), software-rasterized 3D (GLB), themes and animation."
repository = "https://github.com/lpalbou/abstracttui"
homepage = "https://github.com/lpalbou/abstracttui"
documentation = "https://docs.rs/abstracttui"
readme = "README.md"
categories = ["command-line-interface", "rendering", "gui", "graphics"]
keywords = ["tui", "terminal", "renderer", "reactive", "graphics"]
exclude = ["reviews/", "docs/captures/", "docs/media/", ".github/", "book.toml"]

# Dependency policy (see docs/design/00-vision.md): std + the minimal,
# low-level, MIT/Apache-licensed set below. Everything else is hand-rolled.
# This manifest is owned by the integrator; agents request additions via reviews/.
[dependencies]
unicode-width = "0.2"
unicode-segmentation = "1"
miniz_oxide = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
