[package]
name = "abstracttui"
version = "0.2.7"
edition = "2021"
# MSRV (backlog 0180): the floor is set by the library's own std usage —
# `is_multiple_of` (1.87: gfx/png, gfx/base64, three/validate, jpeg),
# above `is_none_or` (1.82: render) and the windows-sys 0.61 target
# floor (1.71). Verified by `cargo +1.87.0 check --all-targets --locked`
# and gated by the `msrv` CI job. Bump policy: an MSRV raise is a
# minor-version event, declared in CHANGELOG (see CONTRIBUTING.md).
rust-version = "1.87"
license = "MIT"
authors = ["Laurent-Philippe Albou <contact@abstractframework.ai>"]
description = "A reactive, compositor-grade terminal UI engine: fine-grained signals, layered rendering with damage tracking, images (kitty/iTerm2/sixel/mosaic), software-rasterized 3D (GLB), themes and animation."
repository = "https://github.com/lpalbou/abstracttui"
homepage = "https://github.com/lpalbou/abstracttui"
documentation = "https://docs.rs/abstracttui"
readme = "README.md"
categories = ["command-line-interface", "rendering", "gui", "graphics"]
keywords = ["tui", "terminal", "renderer", "reactive", "graphics"]
exclude = ["reviews/", "docs/captures/", "docs/media/", ".github/", "book.toml"]

# Dependency policy (see docs/design/00-vision.md): std + the minimal,
# low-level, MIT/Apache-licensed set below. Everything else is hand-rolled.
# This manifest is owned by the integrator; agents request additions via reviews/.
[dependencies]
unicode-width = "0.2"
unicode-segmentation = "1"
miniz_oxide = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 1
